--- a/shop/src/app/Components/add-product-form/add-product-form.component.html
+++ b/shop/src/app/Components/add-product-form/add-product-form.component.html
@@ -19,11 +19,6 @@
       </mat-form-field>
 
       <mat-form-field appearance="outline" class="w-100" color="accent">
-        <mat-label>Image</mat-label>
-        <input matInput formControlName="image" type="file"/>
-      </mat-form-field>
-
-      <mat-form-field appearance="outline" class="w-100" color="accent">
         <mat-label>Count</mat-label>
         <input matInput type="number" formControlName="count">
       </mat-form-field>
@@ -37,32 +32,40 @@
       </mat-form-field>
       <mat-form-field appearance="outline" class="w-100" color="accent">
         <mat-label>Status</mat-label>
-        <mat-select>
+        <mat-select formControlName="status">
           <mat-option value="limited">Limited</mat-option>
           <mat-option value="unlimited">Unlimited</mat-option>
         </mat-select>
       </mat-form-field>
       <mat-form-field appearance="outline" class="w-100" color="accent">
         <mat-label>Rating</mat-label>
-        <mat-select>
-          <mat-option>1</mat-option>
-          <mat-option>2</mat-option>
-          <mat-option>3</mat-option>
-          <mat-option>4</mat-option>
-          <mat-option>5</mat-option>
-        </mat-select>
+        <input matInput min="1" max="5" name="rating" formControlName="rating"/>
       </mat-form-field>
       <mat-form-field appearance="outline" class="w-100" color="accent">
         <mat-label>Characterictics</mat-label>
         <input matInput formControlName="characterictics">
       </mat-form-field>
+      <div class="w-100 mt-half mb-half center flex-column">
+        <button mat-stroked-button (click)="file.click()" color="accent" class="w-100">Upload an image</button>
+        <input formControlName="image" type="file" #file hidden name="image"/>
+      </div>
       <div class="mt w-100" *ngIf="formGroup.invalid && formGroup.touched">
         <button class="w-100" mat-button color="warn">
           Please, check the validity of fields
         </button>
       </div>
+      <div class="mt w-100" *ngIf="productIsAdded">
+        <button class="w-100" mat-stroked-button color="accent" id="visit_btn">
+          Click here to visit the product page
+        </button>
+      </div>
       <div class="w-100 mt mb center">
-        <button mat-flat-button color="accent" [disabled]="formGroup.invalid ||formGroup.untouched" type="submit">Submit</button>
+        <button
+          (click)="submit($event)"
+          mat-flat-button
+          color="accent"
+          [disabled]="formGroup.invalid ||formGroup.untouched"
+          type="submit">Submit</button>
       </div>
     </form>
   </div>
