--- a/shop/src/app/Components/add-product-form/add-product-form.component.scss
+++ b/shop/src/app/Components/add-product-form/add-product-form.component.scss
@@ -1,3 +1,10 @@
 button[type="submit"]{
   min-width: 170px;
 }
+
+.add-product__img{
+  max-width: 300px;
+  object-fit: contain;
+  width: 90%;
+  height: 100%;
+}
