--- a/shop/src/app/Pages/SearchPageResult/SearchPageResult.component.html
+++ b/shop/src/app/Pages/SearchPageResult/SearchPageResult.component.html
@@ -1,10 +1,10 @@
 <div class="w-100 search__area first-slide">
-    <products [isSearch]="true" [searchText]="searchText">
+    <app-products [isSearch]="true" [searchText]="searchText">
         <div class="section__search-query">
             <h6 class="text-center">
                 Результаты поиска для
                 <button color="accent" mat-button>`{{searchText}}`</button>
             </h6>
         </div>
-    </products>
+    </app-products>
 </div>
