--- a/shop/src/app/app.component.html
+++ b/shop/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="w-100 center position-relative align-items-start">
+<div class="w-100 center position-relative align-items-start" id="app-container">
   <app-admin-nav *ngIf="user.isSuperUser()"></app-admin-nav>
 
   <div class="body-content w-100 position-relative" #body>
