--- a/shop/src/styles.scss
+++ b/shop/src/styles.scss
@@ -58,8 +58,15 @@ body{
     width:100%;
 }
 
-.body-content{
-    padding-right:10px;
+app-admin-nav + .body-content {
+  flex-shrink: 1 !important;
+  width: min-content !important;
+  min-width: calc(100% - 60px);
+  max-width: calc(100% - 60px);
+}
+
+.app-container{
+  justify-content: space-between;
 }
 
 #loadingElem{
