--- a/shop/src/app/Pages/CategoryPage/CategoryPage.component.html
+++ b/shop/src/app/Pages/CategoryPage/CategoryPage.component.html
@@ -1,5 +1,5 @@
 <div class="w-100 categories__area first-slide">
-    <products [isCategoryPage]="true">
+    <app-products [isCategoryPage]="true">
         <div class="categories__search-query">
             <h6 class="text-center">
                 Вы смотрите товары, находящиеся в категории
@@ -8,5 +8,5 @@
             <app-slider-component
              [urls]="urls"></app-slider-component>
         </div>
-    </products>
+    </app-products>
 </div>
