--- a/shop/src/app/Pages/Product/Product.component.scss
+++ b/shop/src/app/Pages/Product/Product.component.scss
@@ -140,6 +140,10 @@ p, .h6, h6{
     font-weight: 300;
 }
 
+.img-container{
+  min-height:330px;
+}
+
 .product__price {
     margin-bottom: 30px;
     margin-top: 30px;
@@ -365,5 +369,51 @@ mat-sidenav {
     .product__container {
         grid-template-rows: 60px auto 360px auto;
         padding-top: 2.7rem;
+    }
+}
+
+@media(max-width: $media * 0.5){
+    ::ng-deep{
+      #app-container{
+        flex-direction: column;
+      }
+
+      app-admin-nav{
+        width: 100% !important;
+        height: fit-content !important;
+      }
+
+      .admin-nav__container{
+        flex-direction: row !important;
+      }
+
+      .admin-nav{
+        height: fit-content !important;
+      }
+
+      .product__actions{
+        display: grid !important;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: $margin * 0.5;
+
+        > div, > div > button{
+          width: 100%;
+          max-width: 100%;
+          margin: 0 !important;
+        }
+      }
+
+      .admin-nav__container{
+        justify-content: flex-start;
+
+        > div{
+          margin-bottom: 0 !important;
+          margin-right: $margin * 0.5 !important;
+        }
+      }
+
+      .avatar-media{
+        display: none;
+      }
     }
 }
