--- a/shop/src/app/Components/admin-buttons/admin-buttons.component.html
+++ b/shop/src/app/Components/admin-buttons/admin-buttons.component.html
@@ -1,9 +1,9 @@
 <div class="admin__show-users w-100 mt-half" *ngIf="user.isSuperUser()">
-  <button mat-flat-button class="w-100 mb" (click)="navigateToUsersPage()" color="warn">
+  <button mat-stroked-button class="w-100 mb-2" (click)="navigateToUsersPage()">
     Пользователи
   </button>
 
-  <button mat-flat-button class="w-100 mb"  color="warn">
+  <button mat-stroked-button class="w-100" (click)="navigateToSliderInfoPage()">
     Слайды
   </button>
 </div>
