--- a/shop/src/app/Pages/admin-page/admin-page.component.html
+++ b/shop/src/app/Pages/admin-page/admin-page.component.html
@@ -6,7 +6,7 @@
        <ng-container *ngIf="!isMedia">
          <app-admin-dashboard [user]="user" [currentUser]="currentUser"></app-admin-dashboard>
        </ng-container>
-       <div class="admin__expand-btn w-100" *ngIf="isMedia">
+       <div class="admin__expand-btn w-100 bg-white" *ngIf="isMedia">
          <button color="accent" mat-stroked-button class="w-100" (click)="openUserPhoto()">
            <h6 id="text">
              {{
@@ -15,7 +15,7 @@
            </h6>
          </button>
 
-         <app-admin-buttons  *ngIf="currentUser.isSuperUser()"></app-admin-buttons>
+         <app-admin-buttons  *ngIf="currentUser.isSuperUser()" [user]="currentUser"></app-admin-buttons>
        </div>
        <div class="admin__items ">
          <div class="w-100">
