--- a/shop/src/app/Pages/slider-info-page/slider-info-page.component.html
+++ b/shop/src/app/Pages/slider-info-page/slider-info-page.component.html
@@ -1,9 +1,12 @@
 <div class="w-100">
   <app-section-layout cssClass="slider-info-page" title="Слайды" [hasTitle]="true">
      <mat-tab-group color="accent" class="w-100 mt">
-       <mat-tab label="Главная"></mat-tab>
-       <mat-tab label="Продукты"></mat-tab>
-       <mat-tab label="Отдельный товар"></mat-tab>
+       <mat-tab *ngFor="let item of data" [label]="item">
+         <div class="w-100 simple-wrap">
+           <app-slider-info-content [photos]="photos[data.indexOf(item)] || []" (uploadFile)="uploadFile(item, $event)"></app-slider-info-content>
+         </div>
+       </mat-tab>
      </mat-tab-group>
   </app-section-layout>
 </div>
+
