--- a/shop/src/app/Components/slider-info-content/slider-info-content.component.scss
+++ b/shop/src/app/Components/slider-info-content/slider-info-content.component.scss
@@ -4,11 +4,17 @@
   display: grid !important;
   grid-template-columns: repeat(auto-fill, minmax(150px, 400px));
   grid-gap: $margin;
-  grid-auto-rows: 186px;
+  grid-template-rows: 200px;
+  padding-bottom: $margin;
+  overflow-x: auto;
+}
+
+.slider-info-content__img img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .slider-info-content__img{
-  width: 100%;
-  height: 186px;
-  object-fit: cover;
+  height: 100%;
 }
