--- a/shop/src/app/Pages/Product/Product.component.html
+++ b/shop/src/app/Pages/Product/Product.component.html
@@ -119,6 +119,9 @@
                     </div>
                   </div>
 
+                  <div class="product__carousel">
+                    <app-carousel [pageType]="'product'"></app-carousel>
+                  </div>
                 </div>
               </div>
             </div>
