--- a/shop/src/app/Pages/Products/Products.component.html
+++ b/shop/src/app/Pages/Products/Products.component.html
@@ -9,7 +9,7 @@
             <ng-content></ng-content>
           </ng-container>
           <div class="product__carousel">
-            <app-carousel [images]="carouselImages"></app-carousel>
+            <app-carousel pageType="products"></app-carousel>
           </div>
           <div class="product__categories">
             <app-products-categories></app-products-categories>
