--- a/shop/src/app/Pages/Product/Product.component.scss
+++ b/shop/src/app/Pages/Product/Product.component.scss
@@ -253,9 +253,25 @@ mat-sidenav {
     grid-row: 3/4;
     grid-column: span 6;
     cursor: pointer;
-    min-width: 100%;
-    min-height: 100%;
+    width: 100%;
+    height: 100%;
     border-radius: 5px;
+}
+
+.outline-card{
+  padding: $margin;
+  border: 1px solid #f8f8f8;
+}
+
+.product__images > div{
+    max-height:100%;
+    height:100%;
+    min-height: 100%;
+
+    img{
+      height: 100%;
+      width: 100%;
+    }
 }
 
 .product__ads {
@@ -273,8 +289,12 @@ mat-sidenav {
     grid-column-start: span 5;
     text-align: center;
     width: 100%;
-    padding: 1.5rem;
-    padding-bottom: 0;
+    padding: 1.5rem 1.5rem 0;
+}
+
+.price-btn{
+  background-color: #da1f2e;
+  border: 1px solid #da1f2e;
 }
 
 .product__short-descr,
