--- a/shop/src/app/Components/slider-info-content/slider-info-content.component.scss
+++ b/shop/src/app/Components/slider-info-content/slider-info-content.component.scss
@@ -4,9 +4,11 @@
   display: grid !important;
   grid-template-columns: repeat(auto-fill, minmax(150px, 400px));
   grid-gap: $margin;
-  grid-template-rows: 200px;
+  grid-template-rows:140px 200px;
   padding-bottom: $margin;
   overflow-x: auto;
+  justify-items: center;
+  justify-content: center;
 }
 
 .slider-info-content__items > div{
@@ -24,11 +26,16 @@
   height: 100%;
 }
 
-@media (max-width: $media){
+.slider-info-content__btn{
+  grid-column: 1/-1 !important;
+  width: 100% !important;
+  max-width: 700px;
+  align-self: center;
+  justify-self: center;
+}
+
+@media (max-width: $media) {
   .slider-info-content__items {
-    align-items: center;
-    justify-content: center;
-    justify-items: center;
     grid-template-columns: 1fr;
   }
 }
