--- a/shop/src/app/Components/admin-dashboard/admin-dashboard.component.html
+++ b/shop/src/app/Components/admin-dashboard/admin-dashboard.component.html
@@ -2,7 +2,7 @@
   <div class="w-100 ">
     <div class="w-100">
       <div class="admin__banner center mb">
-        <div class="w-100 center flex-column">
+        <div class="admin__banner-content w-100 center flex-column">
           <div class="center flex-column">
             <h5 class="admin__headline text-center">Профиль</h5>
             <div class="admin__avatar">
