--- a/shop/src/app/Pages/admin-page/admin-page.component.scss
+++ b/shop/src/app/Pages/admin-page/admin-page.component.scss
@@ -244,8 +244,19 @@ th.mat-header-cell {
 }
 
 @media(max-width: $media){
-  .admin__area ::ng-deep .admin__dashboard{
-    display: none;
+  .admin__area ::ng-deep .admin__dashboard {
+    width: 100%;
+    max-width: 100%;
+
+    .admin__banner-content {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-auto-rows: auto;
+    }
+
+    .admin__avatar{
+      max-width: 100%;
+    }
   }
 
   .admin__area{
@@ -305,4 +316,15 @@ th.mat-header-cell {
     .admin__dashboard{
         position: static;
     }
+}
+
+
+@media(max-width: 600px){
+  ::ng-deep .admin__banner-content {
+    grid-template-columns: 1fr !important;
+  }
+
+  ::ng-deep .admin__wrap{
+    width: 80% !important;
+  }
 }
