--- a/shop/src/app/Pages/Product/Product.component.html
+++ b/shop/src/app/Pages/Product/Product.component.html
@@ -128,7 +128,7 @@
                     </div>
                   </div>
 
-                  <div class="product__carousel">
+                  <div class="product__carousel mt w-100 product__related">
                     <app-carousel [pageType]="'product'"></app-carousel>
                   </div>
                 </div>
